--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "test": "nx test"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nrwl/react": "^14.6.5"
+  },
   "devDependencies": {
-    "nx": "14.6.5",
     "@nrwl/cli": "14.6.5",
     "@nrwl/workspace": "14.6.5",
-    "typescript": "~4.7.2",
-    "prettier": "^2.6.2"
+    "nx": "14.6.5",
+    "prettier": "^2.6.2",
+    "typescript": "~4.7.2"
   }
 }
